Исправил 4 лабораторную по правилам оформления RSDN

--- a/LAB4/LAB4.vcxproj
+++ b/LAB4/LAB4.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -19,46 +19,30 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Header Files\ClosedMethodsOfTheClass\4.2.h" />
-    <ClInclude Include="Header Files\ClosedMethodsOfTheClass\PointClassFix2.h" />
-    <ClInclude Include="Header Files\ClosedMethodsOfTheClass\RingFix1.h" />
     <ClInclude Include="Header Files\DependentFields\4.1.h" />
-    <ClInclude Include="Header Files\DependentFields\AlbumClassFix.h" />
-    <ClInclude Include="Header Files\DependentFields\BandClassFix.h" />
+    <ClInclude Include="Header Files\DependentFields\Album.h" />
+    <ClInclude Include="Header Files\DependentFields\Band.h" />
     <ClInclude Include="Header Files\DependentFields\GenreEnum.h" />
-    <ClInclude Include="Header Files\DependentFields\PointClassFix1.h" />
     <ClInclude Include="Header Files\DependentFields\Ring.h" />
-    <ClInclude Include="Header Files\DependentFields\SongClassFix.h" />
-    <ClInclude Include="Header Files\ReadOnlyFields\PointClassFix3.h" />
-    <ClInclude Include="Header Files\ServiceClasses\4.5.h" />
+    <ClInclude Include="Header Files\DependentFields\Song.h" />
+    <ClInclude Include="Header Files\DependentFields\Point.h" />
     <ClInclude Include="Header Files\ServiceClasses\CollisionManager.h" />
     <ClInclude Include="Header Files\ServiceClasses\DoubleValidator.h" />
     <ClInclude Include="Header Files\ServiceClasses\GeometricProgram.h" />
     <ClInclude Include="Header Files\ServiceClasses\Rectangle.h" />
-    <ClInclude Include="Header Files\ServiceClasses\RingFix3.h" />
-    <ClInclude Include="Header Files\StaticFieldsAndMethodsOfTheClass\4.4.h" />
-    <ClInclude Include="Header Files\StaticFieldsAndMethodsOfTheClass\RingFix2.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Resource Files\ClosedMethodsOfTheClass\4.2.cpp" />
-    <ClCompile Include="Resource Files\ClosedMethodsOfTheClass\PointClassFix2.cpp" />
-    <ClCompile Include="Resource Files\ClosedMethodsOfTheClass\RingFix1.cpp" />
     <ClCompile Include="Resource Files\Dependent Fields\4.1.cpp" />
-    <ClCompile Include="Resource Files\Dependent Fields\AlbumClassFix.cpp" />
-    <ClCompile Include="Resource Files\Dependent Fields\BandClassFix.cpp" />
-    <ClCompile Include="Resource Files\Dependent Fields\PointClassFix1.cpp" />
-    <ClCompile Include="Resource Files\Dependent Fields\Ring.cpp" />
+    <ClCompile Include="Resource Files\Dependent Fields\Album.cpp" />
+    <ClCompile Include="Resource Files\Dependent Fields\Band.cpp" />
     <ClCompile Include="Resource Files\Main.cpp" />
-    <ClCompile Include="Resource Files\Dependent Fields\SongClassFix.cpp" />
-    <ClCompile Include="Resource Files\ReadOnlyFields\PointClassFix3.cpp" />
-    <ClCompile Include="Resource Files\ServiceClasses\4.5.cpp" />
+    <ClCompile Include="Resource Files\Dependent Fields\Song.cpp" />
+    <ClCompile Include="Resource Files\Dependent Fields\Point.cpp" />
     <ClCompile Include="Resource Files\ServiceClasses\CollisionManager.cpp" />
     <ClCompile Include="Resource Files\ServiceClasses\DoubleValidator.cpp" />
     <ClCompile Include="Resource Files\ServiceClasses\GeometricProgram.cpp" />
+    <ClCompile Include="Resource Files\Dependent Fields\Ring.cpp" />
     <ClCompile Include="Resource Files\ServiceClasses\Rectangle.cpp" />
-    <ClCompile Include="Resource Files\ServiceClasses\RingFix3.cpp" />
-    <ClCompile Include="Resource Files\StaticFieldsAndMethodsOfTheClass\4.4.cpp" />
-    <ClCompile Include="Resource Files\StaticFieldsAndMethodsOfTheClass\RingFix2.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
