--- a/LAB4/LAB4.vcxproj.filters
+++ b/LAB4/LAB4.vcxproj.filters
@@ -21,19 +21,19 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Header Files\DependentFields\Album.h">
+    <ClInclude Include="Header Files\DependentFields\Music\Album.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Header Files\DependentFields\Band.h">
+    <ClInclude Include="Header Files\DependentFields\Music\Band.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Header Files\DependentFields\GenreEnum.h">
+    <ClInclude Include="Header Files\DependentFields\Music\GenreEnum.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Header Files\DependentFields\Song.h">
+    <ClInclude Include="Header Files\DependentFields\Music\Song.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Header Files\DependentFields\Point.h">
+    <ClInclude Include="Header Files\DependentFields\Geometry\Point.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Header Files\ServiceClasses\DoubleValidator.h">
@@ -48,7 +48,7 @@
     <ClInclude Include="Header Files\ServiceClasses\GeometricProgram.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Header Files\DependentFields\Ring.h">
+    <ClInclude Include="Header Files\DependentFields\Geometry\Ring.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Header Files\DependentFields\4.1.h">
@@ -62,7 +62,7 @@
     <ClCompile Include="Resource Files\Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Resource Files\Dependent Fields\Album.cpp">
+    <ClCompile Include="Resource Files\Dependent Fields\Music\Album.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Resource Files\ServiceClasses\DoubleValidator.cpp">
@@ -74,16 +74,16 @@
     <ClCompile Include="Resource Files\ServiceClasses\GeometricProgram.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Resource Files\Dependent Fields\Band.cpp">
+    <ClCompile Include="Resource Files\Dependent Fields\Music\Band.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Resource Files\Dependent Fields\Song.cpp">
+    <ClCompile Include="Resource Files\Dependent Fields\Music\Song.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Resource Files\Dependent Fields\Point.cpp">
+    <ClCompile Include="Resource Files\Dependent Fields\Geometry\Point.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Resource Files\Dependent Fields\Ring.cpp">
+    <ClCompile Include="Resource Files\Dependent Fields\Geometry\Ring.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Resource Files\ServiceClasses\Rectangle.cpp">
