--- a/LAB 2 Exceptions/Exceptions.vcxproj
+++ b/LAB 2 Exceptions/Exceptions.vcxproj
@@ -140,80 +140,33 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="2.2.1.1.cpp" />
-    <ClCompile Include="2.2.1.2.cpp" />
-    <ClCompile Include="2.2.2.1.cpp" />
-    <ClCompile Include="2.2.2.2.cpp" />
-    <ClCompile Include="2.2.3.1.cpp" />
-    <ClCompile Include="2.2.3.2.cpp" />
-    <ClCompile Include="2.2.3.3.cpp" />
-    <ClCompile Include="2.2.4.1.cpp" />
-    <ClCompile Include="2.2.4.2.cpp" />
-    <ClCompile Include="2.2.4.3.cpp" />
-    <ClCompile Include="2.2.4.4.cpp" />
-    <ClCompile Include="2.2.5.1.cpp" />
-    <ClCompile Include="2.2.5.2.cpp" />
-    <ClCompile Include="2.2.5.3.cpp" />
-    <ClCompile Include="2.2.5.4.cpp" />
-    <ClCompile Include="2.2.5.5.cpp" />
-    <ClCompile Include="2.2.6.1.cpp" />
-    <ClCompile Include="2.2.6.2.cpp" />
-    <ClCompile Include="2.2.6.3.cpp" />
-    <ClCompile Include="2.2.7.1.cpp" />
-    <ClCompile Include="2.2.5.6.cpp" />
-    <ClCompile Include="2.2.7.2.cpp" />
-    <ClCompile Include="2.2.7.3.cpp" />
-    <ClCompile Include="2.2.8.1.cpp" />
-    <ClCompile Include="2.2.8.2.cpp" />
-    <ClCompile Include="2.2.8.3.cpp" />
-    <ClCompile Include="2.2.8.4.cpp" />
-    <ClCompile Include="2.2.8.5.cpp" />
-    <ClCompile Include="2.2.8.6.cpp" />
-    <ClCompile Include="2.2.8.7.cpp" />
-    <ClCompile Include="2.2.8.8.cpp" />
-    <ClCompile Include="2.2.9.cpp" />
+    <ClCompile Include="Resource Files\Enumeration\DemoEnums.cpp" />
+    <ClCompile Include="Resource Files\Exceptions\Sort.cpp" />
+    <ClCompile Include="Resource Files\Structs\Circle.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Resource Files\Structs\Film.cpp" />
+    <ClCompile Include="Resource Files\Structs\Flight.cpp" />
+    <ClCompile Include="Resource Files\Structs\Rectangle.cpp" />
+    <ClCompile Include="Resource Files\Structs\WrongPointers.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="2.2.1.1.h" />
-    <ClInclude Include="2.2.1.2.h" />
-    <ClInclude Include="2.2.2.1.h" />
-    <ClInclude Include="2.2.2.2.h" />
-    <ClInclude Include="2.2.3.1.h" />
-    <ClInclude Include="2.2.3.2.h" />
-    <ClInclude Include="2.2.3.3.h" />
-    <ClInclude Include="2.2.4.1.h" />
-    <ClInclude Include="2.2.4.2.h" />
-    <ClInclude Include="2.2.4.3.h" />
-    <ClInclude Include="2.2.4.4.h" />
-    <ClInclude Include="2.2.5.1.h" />
-    <ClInclude Include="2.2.5.2.h" />
-    <ClInclude Include="2.2.5.3.h" />
-    <ClInclude Include="2.2.5.4.h" />
-    <ClInclude Include="2.2.5.5.h" />
-    <ClInclude Include="2.2.6.1.h" />
-    <ClInclude Include="2.2.6.2.h" />
-    <ClInclude Include="2.2.6.3.h" />
-    <ClInclude Include="2.2.7.1.h" />
-    <ClInclude Include="2.2.5.6.h" />
-    <ClInclude Include="2.2.7.2.h" />
-    <ClInclude Include="2.2.7.3.h" />
-    <ClInclude Include="2.2.8.1.h" />
-    <ClInclude Include="2.2.8.2.h" />
-    <ClInclude Include="2.2.8.3.h" />
-    <ClInclude Include="2.2.8.4.h" />
-    <ClInclude Include="2.2.8.5.h" />
-    <ClInclude Include="2.2.8.6.h" />
-    <ClInclude Include="2.2.8.7.h" />
-    <ClInclude Include="2.2.8.8.h" />
-    <ClInclude Include="2.2.9.h" />
-    <ClInclude Include="Film.h" />
-    <ClInclude Include="Flight.h" />
-    <ClInclude Include="PhoneContact.h" />
-    <ClInclude Include="Rectangle.h" />
-    <ClInclude Include="Song.h" />
-    <ClInclude Include="Subject.h" />
-    <ClInclude Include="Time.h" />
+    <ClInclude Include="Header Files\Enumeration\Color.h" />
+    <ClInclude Include="Header Files\Enumeration\DemoEnums.h" />
+    <ClInclude Include="Header Files\Enumeration\Education.h" />
+    <ClInclude Include="Header Files\Enumeration\Genre.h" />
+    <ClInclude Include="Header Files\Enumeration\Season.h" />
+    <ClInclude Include="Header Files\Enumeration\SmartphoneManufacturer.h" />
+    <ClInclude Include="Header Files\Enumeration\WeekDay.h" />
+    <ClInclude Include="Header Files\Exceptions\Sort.h" />
+    <ClInclude Include="Header Files\Structs\Circle.h" />
+    <ClInclude Include="Header Files\Structs\Film.h" />
+    <ClInclude Include="Header Files\Structs\Flight.h" />
+    <ClInclude Include="Header Files\Structs\PhoneContact.h" />
+    <ClInclude Include="Header Files\Structs\Rectangle.h" />
+    <ClInclude Include="Header Files\Structs\Song.h" />
+    <ClInclude Include="Header Files\Structs\Subject.h" />
+    <ClInclude Include="Header Files\Structs\Time.h" />
+    <ClInclude Include="Header Files\Structs\WrongPointers.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
