--- a/LAB4/LAB4.vcxproj
+++ b/LAB4/LAB4.vcxproj
@@ -19,30 +19,30 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Header Files\DependentFields\4.1.h" />
-    <ClInclude Include="Header Files\DependentFields\Music\Album.h" />
-    <ClInclude Include="Header Files\DependentFields\Music\Band.h" />
-    <ClInclude Include="Header Files\DependentFields\Music\GenreEnum.h" />
-    <ClInclude Include="Header Files\DependentFields\Geometry\Ring.h" />
-    <ClInclude Include="Header Files\DependentFields\Music\Song.h" />
-    <ClInclude Include="Header Files\DependentFields\Geometry\Point.h" />
-    <ClInclude Include="Header Files\ServiceClasses\CollisionManager.h" />
-    <ClInclude Include="Header Files\ServiceClasses\DoubleValidator.h" />
-    <ClInclude Include="Header Files\ServiceClasses\GeometricProgram.h" />
-    <ClInclude Include="Header Files\ServiceClasses\Rectangle.h" />
+    <ClInclude Include="DependentFields\4.1.h" />
+    <ClInclude Include="DependentFields\Music\Album.h" />
+    <ClInclude Include="DependentFields\Music\Band.h" />
+    <ClInclude Include="DependentFields\Music\GenreEnum.h" />
+    <ClInclude Include="DependentFields\Geometry\Ring.h" />
+    <ClInclude Include="DependentFields\Music\Song.h" />
+    <ClInclude Include="DependentFields\Geometry\Point.h" />
+    <ClInclude Include="ServiceClasses\CollisionManager.h" />
+    <ClInclude Include="ServiceClasses\DoubleValidator.h" />
+    <ClInclude Include="ServiceClasses\GeometricProgram.h" />
+    <ClInclude Include="ServiceClasses\Rectangle.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Resource Files\Dependent Fields\4.1.cpp" />
-    <ClCompile Include="Resource Files\Dependent Fields\Music\Album.cpp" />
-    <ClCompile Include="Resource Files\Dependent Fields\Music\Band.cpp" />
-    <ClCompile Include="Resource Files\Main.cpp" />
-    <ClCompile Include="Resource Files\Dependent Fields\Music\Song.cpp" />
-    <ClCompile Include="Resource Files\Dependent Fields\Geometry\Point.cpp" />
-    <ClCompile Include="Resource Files\ServiceClasses\CollisionManager.cpp" />
-    <ClCompile Include="Resource Files\ServiceClasses\DoubleValidator.cpp" />
-    <ClCompile Include="Resource Files\ServiceClasses\GeometricProgram.cpp" />
-    <ClCompile Include="Resource Files\Dependent Fields\Geometry\Ring.cpp" />
-    <ClCompile Include="Resource Files\ServiceClasses\Rectangle.cpp" />
+    <ClCompile Include="DependentFields\4.1.cpp" />
+    <ClCompile Include="DependentFields\Music\Album.cpp" />
+    <ClCompile Include="DependentFields\Music\Band.cpp" />
+    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="DependentFields\Music\Song.cpp" />
+    <ClCompile Include="DependentFields\Geometry\Point.cpp" />
+    <ClCompile Include="ServiceClasses\CollisionManager.cpp" />
+    <ClCompile Include="ServiceClasses\DoubleValidator.cpp" />
+    <ClCompile Include="ServiceClasses\GeometricProgram.cpp" />
+    <ClCompile Include="DependentFields\Geometry\Ring.cpp" />
+    <ClCompile Include="ServiceClasses\Rectangle.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
